tests/enum_from/compile_fail/field/duplicate_field_mapping.stderr
error: Multiple mapping found for source enum `Source`
  --> tests/enum_from/compile_fail/field/duplicate_field_mapping.rs:13:9
   |
13 |         #[enum_from(Source::Struct.x, Source::Struct.y)]
   |         ^
